Final Finished Copy

--- a/AFA/Form1.resx
+++ b/AFA/Form1.resx
@@ -124,7 +124,7 @@ is changed. To enter a pets information, click on the symbol of the chosen
 animal. Next, enter the name of the pet and fill out the weekly info. Continue, 
 and you will be shown to the graph of your pet's health.
 At the end of the week, press the 'New Week' button, and you will be
-shown to a graph presenting the weekly cost of food, and the health 
+shown to graphs presenting the total cost of food, and the health 
 states of all of the animals. </value>
   </data>
 </root>
